feat: inserting list on the main of the page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <!-- head of page -->
     <header>
-        <h1><strong>Il mio viaggio a Londra</strong></h1>
+        <h1><strong> Il mio viaggio a Londra </strong></h1>
         <br>
     <img width="200" src="./img/img/pexels-bill-emrich-230794-0.jpg" alt="eye of london">
     <img width="200" src="./img/img/pexels-bill-emrich-230794-1.jpg" alt="Times river">
@@ -16,5 +16,57 @@
     <br>
     <hr>
     </header>
+    <!-- head end -->
+    <!-- main of page -->
+    <main>
+        <section>
+            <h2><strong> Le mie spese </strong></h2>
+            <br>
+            <!-- opening table -->
+            <table>
+                <thead>
+                    <tr>
+                        <th> Numero </th>
+                        <th> Descrizione </th>
+                        <th> Costo </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td> 1 </td>
+                        <td> Biglietto Aereo </td>
+                        <td> 120€ </td>
+                    </tr>
+                    <tr>
+                        <td> 1 </td>
+                        <td> Biglietto Aereo </td>
+                        <td> 120€ </td>                        
+                    </tr>
+                    <tr>
+                        <td> 1 </td>
+                        <td> Biglietto Aereo </td>
+                        <td> 120€ </td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <td colspan="2"> Totale </td>
+                    <td> 360€ </td>
+                </tfoot>
+            </table>
+            <!-- closing table -->
+        </section>
+        <hr>
+        <section>
+            <h3><strong> Cose da fare </strong></h3>
+            <!-- open unordered list -->
+             <ul>
+                <li &check> Visitare la Tower of London </li>
+                <li> Visitare Greenwich </li>
+                <li> Ascoltare artista di strada a Covent Garden </li>
+                <li> Mangiare il tipico Fish n Chips inglese </li>
+             </ul>
+
+        </section>
+    </main>
 </body>
 </html>
