--- a/index.html
+++ b/index.html
@@ -60,13 +60,48 @@
             <h3><strong> Cose da fare </strong></h3>
             <!-- open unordered list -->
              <ul>
-                <li &check> Visitare la Tower of London </li>
-                <li> Visitare Greenwich </li>
-                <li> Ascoltare artista di strada a Covent Garden </li>
-                <li> Mangiare il tipico Fish n Chips inglese </li>
+                <li &check> Visitare la Tower of London ✗ </li>
+                <li> Visitare Greenwich ✓ </li>
+                <li> Ascoltare artista di strada a Covent Garden ✓ </li>
+                <li> Mangiare il tipico Fish n Chips inglese ✗ </li>
              </ul>
-
+<!-- close unordered list -->
         </section>
-    </main>
+        <hr>
+        <section>
+            <h4><strong> Info Utili </strong></h4>
+            <!-- opening nested list -->
+             <ol>
+                <li> Numeri utili di emergenza
+                    <ul>
+                    <li><strong> 999 </strong> - Emergenza </li>
+                    <li><strong> 101 </strong> - Polizia </li>
+                    <li><strong> 111 </strong> - numero assistenza medica </li>
+                    </ul>
+                </li>
+                <li> Hotel 
+                    <ul> 
+                        <li>Nome dell'Hotel: <strong>Buckingam Palace</strong></li>
+                    <li> Indirizzo dell'Hotel: <strong>Westminister, London SW1A 1AA, United Kingdom </strong> </li>
+                    </ul>
+                </li>
+                <li> Aereo 
+                    <ul><li><strong>Volo di andata</strong> : YI234X, ore 09.10 presso Malpensa </li>
+                    <li><strong>Volo di ritorno</strong> : YI234X, ore 18.15 da London Heatrow </li>
+                </ul>
+                </li>
+             </ol>
+        </section>
+        <!-- closing nested list -->
+        </main>
+        <!-- main end -->
+        <hr>
+         <!-- opening footer -->
+          <footer>
+            <h5><strong> Le foto </strong></h5>
+            <img src="./buckingam.jpg" alt="Bucking Palace">
+            <img src="./evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg" alt="tower bridge">
+          </footer>
+          <!-- footer end -->
 </body>
 </html>
