feat: attention! remember always to open tr for a table list; line 52

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
                     </tr>
                 </tbody>
                 <tfoot>
+                    <tr>
                     <td colspan="2"> Totale </td>
                     <td> 360€ </td>
+                    </tr>
                 </tfoot>
             </table>
             <!-- closing table -->
@@ -60,7 +62,7 @@
             <h3><strong> Cose da fare </strong></h3>
             <!-- open unordered list -->
              <ul>
-                <li &check> Visitare la Tower of London ✗ </li>
+                <li> Visitare la Tower of London ✗ </li>
                 <li> Visitare Greenwich ✓ </li>
                 <li> Ascoltare artista di strada a Covent Garden ✓ </li>
                 <li> Mangiare il tipico Fish n Chips inglese ✗ </li>
